--- a/src/html/p/how-did-I-start-learning-programming/index.html
+++ b/src/html/p/how-did-I-start-learning-programming/index.html
@@ -10,10 +10,41 @@
 
     })
 
-    <main class="container post--font-size main--post">
+    <main id="post--main" class="container post--font-size main--post">
+
+        <div class="container container--post">
+            <div class="row row-cols-1 row-cols-lg-4 g-2 g-lg-3 justify-content-end">
+                <div class="col">
+                    <div class="text-invert btn-rounded fs-5">
+                        <button onClick="PostTextUp()" aria-label="Увеличить размер шрифта на сайте"
+                            class="btn btn-dark btn-post--btn px-4 py-2 d-flex text-decoration-none text-invert align-items-center">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" class="icon-invert me-3"
+                                viewBox="0 0 16 16">
+                                <path
+                                    d="m2.244 13.081.943-2.803H6.66l.944 2.803H8.86L5.54 3.75H4.322L1 13.081h1.244zm2.7-7.923L6.34 9.314H3.51l1.4-4.156h.034zm9.146 7.027h.035v.896h1.128V8.125c0-1.51-1.114-2.345-2.646-2.345-1.736 0-2.59.916-2.666 2.174h1.108c.068-.718.595-1.19 1.517-1.19.971 0 1.518.52 1.518 1.464v.731H12.19c-1.647.007-2.522.8-2.522 2.058 0 1.319.957 2.18 2.345 2.18 1.06 0 1.716-.43 2.078-1.011zm-1.763.035c-.752 0-1.456-.397-1.456-1.244 0-.65.424-1.115 1.408-1.115h1.805v.834c0 .896-.752 1.525-1.757 1.525z" />
+                            </svg>
+                            Увеличить
+                        </button>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="text-invert btn-rounded fs-5">
+                        <button onClick="PostTextDown()" aria-label="Уменьшить размер шрифта на сайте"
+                            class="btn btn-dark btn-post--btn px-4 py-2 d-flex text-decoration-none text-invert align-items-center">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" class="icon-invert me-3"
+                                viewBox="0 0 16 16">
+                                <path
+                                    d="m2.244 13.081.943-2.803H6.66l.944 2.803H8.86L5.54 3.75H4.322L1 13.081h1.244zm2.7-7.923L6.34 9.314H3.51l1.4-4.156h.034zm9.146 7.027h.035v.896h1.128V8.125c0-1.51-1.114-2.345-2.646-2.345-1.736 0-2.59.916-2.666 2.174h1.108c.068-.718.595-1.19 1.517-1.19.971 0 1.518.52 1.518 1.464v.731H12.19c-1.647.007-2.522.8-2.522 2.058 0 1.319.957 2.18 2.345 2.18 1.06 0 1.716-.43 2.078-1.011zm-1.763.035c-.752 0-1.456-.397-1.456-1.244 0-.65.424-1.115 1.408-1.115h1.805v.834c0 .896-.752 1.525-1.757 1.525z" />
+                            </svg>
+                            Уменьшить
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
 
         <div class="container--post post--start-1">
-            <h1>С чего я начал изучать программирование</h1>
+            <h1 class="post--h1-font">С чего я начал изучать программирование</h1>
             <p class="post--start-p">Постараюсь ответить на этот вопрос.</p>
         </div>
 
@@ -28,7 +59,7 @@
                 пор. В большей степени это связано с огромным спросом в программистах, которых становится все меньше. О удаленной работе
                 мы поговорим позже.
             </p>
-            <h3>Первый проект</h3>
+            <h3 class="post--h-font">Первый проект</h3>
             <p>
                 Первый проект, который я разрабатывал на своих плечах, с которым мне помогал мой научный руководитель — игровой проект
                 Babka On The Hunt. Это другая версия игры, представленная в Google Play.
@@ -46,7 +77,7 @@
                 Для того, чтобы лучше понять смысл программирования с моим научным руководителем было решено разрабатывать свой игровой
                 проект, с которым я выступал на конкурсах и занимал места.
             </p>
-            <h3>Мой первый сайт</h3>
+            <h3 class="post--h-font">Мой первый сайт</h3>
             <p>
                 Помимо наличия игрового проекта в разработке, мне всегда было интересно разработать свой сайт, которым будут
                 пользоваться люди. И я стал увлекаться еще и данным направлением.
@@ -63,7 +94,7 @@
                 Так я и стал вести в разработке проект live.creagoo.ru, о котором писал статью ранее. Уже к этому моменту я активно
                 занимался разработкой игровых проектов и web-ресурсов.
             </p>
-            <h3>Прочие занятия</h3>
+            <h3 class="post--h-font">Прочие занятия</h3>
             <p>
                 Также я активно писал код и на Python’е, на котором, преимущественно, создавал алгоритмы и никогда не занимался
                 разработкой своей системы, потому что я всегда использовал другие языки программирования для решения своих технических
@@ -73,7 +104,7 @@
                 На Python’е я писал программы для работы в консоли. Создавал web-ресурсы с авторизацией пользователя и решал задачи с
                 искусственным интеллектом.
             </p>
-            <h3>Как я познакомился с программированием</h3>
+            <h3 class="post--h-font">Как я познакомился с программированием</h3>
             <p>
                 Все свое детство я был связан с техникой: телефонами, ноутбуками и прочими аппаратами. Меня всегда привлекало данное
                 направление и мне было интересно разбираться и чинить поделки.
@@ -105,6 +136,7 @@
 
     </main>
 
+    <script src="/js/post.js"></script>
     @@include('../../../parts/footer.html', {
 
     })
