--- a/src/html/p/project-development-history-live.creagoo.ru-its-forced-closure/index.html
+++ b/src/html/p/project-development-history-live.creagoo.ru-its-forced-closure/index.html
@@ -10,10 +10,41 @@
 
     })
 
-    <main class="container post--font-size main--post">
+    <main id="post--main" class="container post--font-size main--post">
+
+        <div class="container container--post">
+            <div class="row row-cols-1 row-cols-lg-4 g-2 g-lg-3 justify-content-end">
+                <div class="col">
+                    <div class="text-invert btn-rounded fs-5">
+                        <button onClick="PostTextUp()" aria-label="Увеличить размер шрифта на сайте"
+                            class="btn btn-dark btn-post--btn px-4 py-2 d-flex text-decoration-none text-invert align-items-center">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" class="icon-invert me-3"
+                                viewBox="0 0 16 16">
+                                <path
+                                    d="m2.244 13.081.943-2.803H6.66l.944 2.803H8.86L5.54 3.75H4.322L1 13.081h1.244zm2.7-7.923L6.34 9.314H3.51l1.4-4.156h.034zm9.146 7.027h.035v.896h1.128V8.125c0-1.51-1.114-2.345-2.646-2.345-1.736 0-2.59.916-2.666 2.174h1.108c.068-.718.595-1.19 1.517-1.19.971 0 1.518.52 1.518 1.464v.731H12.19c-1.647.007-2.522.8-2.522 2.058 0 1.319.957 2.18 2.345 2.18 1.06 0 1.716-.43 2.078-1.011zm-1.763.035c-.752 0-1.456-.397-1.456-1.244 0-.65.424-1.115 1.408-1.115h1.805v.834c0 .896-.752 1.525-1.757 1.525z" />
+                            </svg>
+                            Увеличить
+                        </button>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="text-invert btn-rounded fs-5">
+                        <button onClick="PostTextDown()" aria-label="Уменьшить размер шрифта на сайте"
+                            class="btn btn-dark btn-post--btn px-4 py-2 d-flex text-decoration-none text-invert align-items-center">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" class="icon-invert me-3"
+                                viewBox="0 0 16 16">
+                                <path
+                                    d="m2.244 13.081.943-2.803H6.66l.944 2.803H8.86L5.54 3.75H4.322L1 13.081h1.244zm2.7-7.923L6.34 9.314H3.51l1.4-4.156h.034zm9.146 7.027h.035v.896h1.128V8.125c0-1.51-1.114-2.345-2.646-2.345-1.736 0-2.59.916-2.666 2.174h1.108c.068-.718.595-1.19 1.517-1.19.971 0 1.518.52 1.518 1.464v.731H12.19c-1.647.007-2.522.8-2.522 2.058 0 1.319.957 2.18 2.345 2.18 1.06 0 1.716-.43 2.078-1.011zm-1.763.035c-.752 0-1.456-.397-1.456-1.244 0-.65.424-1.115 1.408-1.115h1.805v.834c0 .896-.752 1.525-1.757 1.525z" />
+                            </svg>
+                            Уменьшить
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
 
         <div class="container--post post--start-1">
-            <h1>История разработки проекта live.creagoo.ru — его вынужденное закрытие</h1>
+            <h1 class="post--h1-font">История разработки проекта live.creagoo.ru — его вынужденное закрытие</h1>
             <p class="post--start-p">live.creagoo.ru должен был заменить основной сайт Creagoo.</p>
         </div>
 
@@ -28,7 +59,7 @@
                 острое желание заняться оптимизацией сайта, а для этого требовался контроль за разработкой. Я смог получить контроль,
                 создавая сайт самостоятельно.
             </p>
-            <h3>Для чего используется Bootstrap</h3>
+            <h3 class="post--h-font">Для чего используется Bootstrap</h3>
             <p>
                 Bootstrap несет в себе заранее написанные стили и некоторые решения, использующие JavaScript. С помощью Bootstrap можно
                 создавать адаптивные сайты, без написания «базовых» стилей.
@@ -37,19 +68,19 @@
                 Использовался Bootstrap в связи с тем, что с его помощью можно достаточно быстро создать простой сайт. Этим я и решил
                 пользоваться и стал изучать Bootstrap. Мое изучение Bootstrap отразилось в создании проекта live.creagoo.ru.
             </p>
-            <h3>Первые страницы, созданные для проекта live.creagoo.ru</h3>
+            <h3 class="post--h-font">Первые страницы, созданные для проекта live.creagoo.ru</h3>
             <p>
                 Прежде всего стоит сказать, что проект live.creagoo.ru разрабатывался для игровой студии Creagoo, в которой я руковожу.
                 Первые страницы — это страницы игровых проектов, описания команды и история разработки логотипа. Это все базовые
                 страницы, без которых масштабный сайт не может существовать.
             </p>
-            <h3>Блог в проекте live.creagoo.ru</h3>
+            <h3 class="post--h-font">Блог в проекте live.creagoo.ru</h3>
             <p>
                 Далее я стал вести в разработке и другие решения. Например, я разработал свой блог уже в 2020 году. Представлял он
                 собой обычную базу данных, вместе с языком программирования PHP, с помощью которого производилось подключение к базе
                 данных и управление записями из таблиц.
             </p>
-            <h3>Персонализация контента — личный кабинет проекта live.creagoo.ru</h3>
+            <h3 class="post--h-font">Персонализация контента — личный кабинет проекта live.creagoo.ru</h3>
             <p>
                 После я решил вести в разработке свой личный кабинет, который я смог довести до ума только спустя 2 года в проекте
                 <a href="//id.creagoo.ru" class="link">аквариум</a>. Личный кабинет — это простое тестовое задание, проверяющее умение программиста управлять данными для
@@ -68,7 +99,7 @@
                 «идеального» проекта является пустой тратой времени. Все, что хочется исправить сейчас следует оставить просто до лучших
                 времен.
             </p>
-            <h3>Сообщения в проекте live.creagoo.ru</h3>
+            <h3 class="post--h-font">Сообщения в проекте live.creagoo.ru</h3>
             <p>
                 Также было реализовано интересное технологическое решение в лице возможности вести переписку с пользователями. Ты
                 самостоятельно выбираешь человека, с которым будешь общаться. Вводишь нужное сообщение, отправляешь, его получает
@@ -80,7 +111,7 @@
                 перезагрузки страницы. Не отображалось, когда последний раз пользователь зашел в сеть и можно ли ему сейчас написать или
                 нет.
             </p>
-            <h3>Зачем я стал вести проект live.creagoo.ru</h3>
+            <h3 class="post--h-font">Зачем я стал вести проект live.creagoo.ru</h3>
             <p>
                 Проект live.creagoo.ru существовал в качестве замены основного сайта. CMS WordPress предоставляло плохую техническую
                 часть, слабую оптимизацию и отсутствие возможности прямого редактирования сайта.
@@ -93,7 +124,7 @@
                 В будущем я планировал заменить текущий сайт <a href="//creagoo.ru" class="link">creagoo.ru</a> новым решением live.creagoo.ru. Спойлер: именно это у меня и
                 получилось. Сейчас на <a href="//creagoo.ru" class="link">creagoo.ru</a> расположен сайт, который я самостоятельно вел в разработке.
             </p>
-            <h3>Почему я решил отказаться от использования CMS WordPress</h3>
+            <h3 class="post--h-font">Почему я решил отказаться от использования CMS WordPress</h3>
             <p>
                 CMS WordPress помогает вести разработку в более удобном формате. Но чаще всего, если проанализировать созданные сайты на
                 CMS WordPress, данные сайты имеют огромное количество проблем. Начиная от плохо адаптивных сайтов, отсутствия
@@ -118,6 +149,7 @@
 
     </main>
 
+    <script src="/js/post.js"></script>
     @@include('../../../parts/footer.html', {
 
     })
