--- a/src/html/p/experience-using-iphone-6s-for-six-months/index.html
+++ b/src/html/p/experience-using-iphone-6s-for-six-months/index.html
@@ -10,10 +10,41 @@
 
     })
 
-    <main class="container post--font-size main--post">
+    <main id="post--main" class="container post--font-size main--post">
+
+        <div class="container container--post">
+            <div class="row row-cols-1 row-cols-lg-4 g-2 g-lg-3 justify-content-end">
+                <div class="col">
+                    <div class="text-invert btn-rounded fs-5">
+                        <button onClick="PostTextUp()" aria-label="Увеличить размер шрифта на сайте"
+                            class="btn btn-dark btn-post--btn px-4 py-2 d-flex text-decoration-none text-invert align-items-center">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" class="icon-invert me-3"
+                                viewBox="0 0 16 16">
+                                <path
+                                    d="m2.244 13.081.943-2.803H6.66l.944 2.803H8.86L5.54 3.75H4.322L1 13.081h1.244zm2.7-7.923L6.34 9.314H3.51l1.4-4.156h.034zm9.146 7.027h.035v.896h1.128V8.125c0-1.51-1.114-2.345-2.646-2.345-1.736 0-2.59.916-2.666 2.174h1.108c.068-.718.595-1.19 1.517-1.19.971 0 1.518.52 1.518 1.464v.731H12.19c-1.647.007-2.522.8-2.522 2.058 0 1.319.957 2.18 2.345 2.18 1.06 0 1.716-.43 2.078-1.011zm-1.763.035c-.752 0-1.456-.397-1.456-1.244 0-.65.424-1.115 1.408-1.115h1.805v.834c0 .896-.752 1.525-1.757 1.525z" />
+                            </svg>
+                            Увеличить
+                        </button>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="text-invert btn-rounded fs-5">
+                        <button onClick="PostTextDown()" aria-label="Уменьшить размер шрифта на сайте"
+                            class="btn btn-dark btn-post--btn px-4 py-2 d-flex text-decoration-none text-invert align-items-center">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" class="icon-invert me-3"
+                                viewBox="0 0 16 16">
+                                <path
+                                    d="m2.244 13.081.943-2.803H6.66l.944 2.803H8.86L5.54 3.75H4.322L1 13.081h1.244zm2.7-7.923L6.34 9.314H3.51l1.4-4.156h.034zm9.146 7.027h.035v.896h1.128V8.125c0-1.51-1.114-2.345-2.646-2.345-1.736 0-2.59.916-2.666 2.174h1.108c.068-.718.595-1.19 1.517-1.19.971 0 1.518.52 1.518 1.464v.731H12.19c-1.647.007-2.522.8-2.522 2.058 0 1.319.957 2.18 2.345 2.18 1.06 0 1.716-.43 2.078-1.011zm-1.763.035c-.752 0-1.456-.397-1.456-1.244 0-.65.424-1.115 1.408-1.115h1.805v.834c0 .896-.752 1.525-1.757 1.525z" />
+                            </svg>
+                            Уменьшить
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
 
         <div class="container--post post--start-1">
-            <h1>Опыт использования iPhone 6s в течение полугода</h1>
+            <h1 class="post--h1-font">Опыт использования iPhone 6s в течение полугода</h1>
             <p class="post--start-p">Мой первый айфон.</p>
         </div>
 
@@ -28,12 +59,12 @@
                 желания полностью переходить на экосистему Apple, потому что думал, что мне достаточно будет одного макбука. Но как
                 оказалось позже - переход на экосистему Apple абсолютно верный шаг.
             </p>
-            <h3>Чем обосновывалась моя покупка</h3>
+            <h3 class="post--h-font">Чем обосновывалась моя покупка</h3>
             <p>
                 Я решил взять попробовать iPhone 6s из-за 2 причин: я хотел попробовать экосистему Apple и мне было интересно собрать
                 приложение для iOS. И мое знакомство оказалось очень приятным, что я решил полностью перейти на экосистему Apple.
             </p>
-            <h3>Первое впечатление от своего первого айфона</h3>
+            <h3 class="post--h-font">Первое впечатление от своего первого айфона</h3>
             <p>
                 Продуманность системы, анимации, экосистема, продуманность приложений, отличные цвета и приятные материалы - это все,
                 что Вы получите от устройства Apple.
@@ -47,7 +78,7 @@
                 Я смело могу порекомендовать к покупке айфона в качестве своего основного устройства, если перед Вами не стоят особые
                 задачи, для решений которых айфон не будет казаться таким сильным с технической стороны.
             </p>
-            <h3>Большие удобства iPhone 6s</h3>
+            <h3 class="post--h-font">Большие удобства iPhone 6s</h3>
             <p>
                 До этого времени я пользовался лишь андроид смартфонами и знал об удобстве айфонов лишь по словам людей. Да, пускай у
                 меня иногда и получалось воспользоваться айфонами и даже в течении некоторого времени, данный опыт нельзя назвать опытом
@@ -62,7 +93,7 @@
                 цены —невероятное счастье для опыта. Вряд ли у меня получится описать невероятные качества данного аппарата, но я
                 постараюсь.
             </p>
-            <h3>Отличия айфона от телефона на андроиде</h3>
+            <h3 class="post--h-font">Отличия айфона от телефона на андроиде</h3>
             <p>
                 Прежде всего интеграция с другими устройствами Apple выполнена отлично. Да, такое есть и у других компаниях, но их
                 решения слабее и я не пользуюсь техникой одной компании.
@@ -82,7 +113,7 @@
                 Сзади крышка айфона выполнена из алюминия, из-за чего разбить ее не представляется возможным. А материалы приятные, и
                 телефон выглядит достаточно красиво.
             </p>
-            <h3>Проблемы iPhone 6s</h3>
+            <h3 class="post--h-font">Проблемы iPhone 6s</h3>
             <p>
                 Устройство уже весьма старое и некоторые нововведения iOS 15 для телефона весьма плохо сказываются на работоспособности
                 и удобстве.
@@ -99,7 +130,7 @@
                 потратила большую часть своей емкости. Мое использование айфона показало, что его хватает на 3-4 часа активного
                 использования со 100% аккумулятором.
             </p>
-            <h3>Заключение</h3>
+            <h3 class="post--h-font">Заключение</h3>
             <p>
                 Данный аппарат я могу посоветовать тем, кто желает испробовать айфон в качестве основного устройства без особых
                 вложений. Последняя поддерживаемая iOS — 15, поэтому восприятие от устройства будет максимально. Но использовать iPhone
@@ -115,6 +146,7 @@
 
     </main>
 
+    <script src="/js/post.js"></script>
     @@include('../../../parts/footer.html', {
 
     })
