--- a/src/html/p/how-I-develop-websites-in-php/index.html
+++ b/src/html/p/how-I-develop-websites-in-php/index.html
@@ -10,10 +10,41 @@
 
     })
 
-    <main class="container post--font-size main--post">
+    <main id="post--main" class="container post--font-size main--post">
+
+        <div class="container container--post">
+            <div class="row row-cols-1 row-cols-lg-4 g-2 g-lg-3 justify-content-end">
+                <div class="col">
+                    <div class="text-invert btn-rounded fs-5">
+                        <button onClick="PostTextUp()" aria-label="Увеличить размер шрифта на сайте"
+                            class="btn btn-dark btn-post--btn px-4 py-2 d-flex text-decoration-none text-invert align-items-center">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" class="icon-invert me-3"
+                                viewBox="0 0 16 16">
+                                <path
+                                    d="m2.244 13.081.943-2.803H6.66l.944 2.803H8.86L5.54 3.75H4.322L1 13.081h1.244zm2.7-7.923L6.34 9.314H3.51l1.4-4.156h.034zm9.146 7.027h.035v.896h1.128V8.125c0-1.51-1.114-2.345-2.646-2.345-1.736 0-2.59.916-2.666 2.174h1.108c.068-.718.595-1.19 1.517-1.19.971 0 1.518.52 1.518 1.464v.731H12.19c-1.647.007-2.522.8-2.522 2.058 0 1.319.957 2.18 2.345 2.18 1.06 0 1.716-.43 2.078-1.011zm-1.763.035c-.752 0-1.456-.397-1.456-1.244 0-.65.424-1.115 1.408-1.115h1.805v.834c0 .896-.752 1.525-1.757 1.525z" />
+                            </svg>
+                            Увеличить
+                        </button>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="text-invert btn-rounded fs-5">
+                        <button onClick="PostTextDown()" aria-label="Уменьшить размер шрифта на сайте"
+                            class="btn btn-dark btn-post--btn px-4 py-2 d-flex text-decoration-none text-invert align-items-center">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" class="icon-invert me-3"
+                                viewBox="0 0 16 16">
+                                <path
+                                    d="m2.244 13.081.943-2.803H6.66l.944 2.803H8.86L5.54 3.75H4.322L1 13.081h1.244zm2.7-7.923L6.34 9.314H3.51l1.4-4.156h.034zm9.146 7.027h.035v.896h1.128V8.125c0-1.51-1.114-2.345-2.646-2.345-1.736 0-2.59.916-2.666 2.174h1.108c.068-.718.595-1.19 1.517-1.19.971 0 1.518.52 1.518 1.464v.731H12.19c-1.647.007-2.522.8-2.522 2.058 0 1.319.957 2.18 2.345 2.18 1.06 0 1.716-.43 2.078-1.011zm-1.763.035c-.752 0-1.456-.397-1.456-1.244 0-.65.424-1.115 1.408-1.115h1.805v.834c0 .896-.752 1.525-1.757 1.525z" />
+                            </svg>
+                            Уменьшить
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
 
         <div class="container--post post--start-1">
-            <h1>Как я разрабатываю сайты на PHP</h1>
+            <h1 class="post--h1-font">Как я разрабатываю сайты на PHP</h1>
             <p class="post--start-p">Небольшой гайд.</p>
         </div>
 
@@ -27,7 +58,7 @@
                 За 3 года активной разработки проектов в web-среде для личного пользования и людям на заказ я вывел некоторую форму
                 удобной сортировки проекта. Решил рассказать об этом людям, так как скоро буду менять стиль разработки.
             </p>
-            <h3>Структурирование проекта</h3>
+            <h3 class="post--h-font">Структурирование проекта</h3>
             <p>
                 Прежде всего стоит разобраться со структурой проекта. Какое-то время я использовал длинные названия, понятные, но из-за
                 них URL может удлиниться. Теперь мне больше по душе непонятные папки в духе «a», «f», «db» и прочее.
@@ -67,7 +98,7 @@
             <p>
                 И самое интересное - папка «a» - сокращение от слова another. Чаще всего здесь я храню весь «мусор», без которого нельзя обойтись. Я редко меняю файлы и папки, хранящиеся в папке «a». Именно поэтому я вынес данные файлы и папки в папку «a». К примеру, в папке «a» я храню стили Bootstrap, шрифты, JavaScript-код и сохранения с базы данных. В случае чего можно расширить количество хранимых здесь файлов и интегрировать иные решения, нужные для проекта.
             </p>
-            <h3>Вспомогательные файлы, нужные для качественного сайта</h3>
+            <h3 class="post--h-font">Вспомогательные файлы, нужные для качественного сайта</h3>
             <p>
                 Но просто папками и файлами PHP обойтись не получится. Да, можно создать отличный, оптимизированных с хорошей
                 доступностью сайт. Но помимо наличия файлов страниц, нужны также вспомогательные файлы, описывающие сайт. Данные файлы
@@ -101,7 +132,7 @@
                 посмотрите новостные сайты, в footer’е Вы увидите ссылку на RSS-канал. Это файл, хранящий какие-то записи. Часто данный
                 RSS-файл можно подключить для какой-нибудь соц. сети, чтобы она отображала Ваши последние страницы.
             </p>
-            <h3>«Чистый» PHP или Laravel</h3>
+            <h3 class="post--h-font">«Чистый» PHP или Laravel</h3>
             <p>
                 Мы разобрали структуру сайта, посмотрели, каким образом следует хранить файлы проекта. Теперь разберемся, какой вариант
                 следует использовать - просто PHP или фреймворк Laravel?
@@ -138,7 +169,7 @@
                 непонятно, каким образом можно удобно загрузить проект на сервер. Отсутствие гостеприимства и оттолкнуло меня от
                 использования Laravel.
             </p>
-            <h3>Язык программирования для обработки backend-запросов</h3>
+            <h3 class="post--h-font">Язык программирования для обработки backend-запросов</h3>
             <p>
                 Я решил выбрать язык программирования PHP для обработки backend-запросов. Выбор сделан из-за очень простой причины:
                 данный язык программирования развивается достаточно долго, имеет внутри себя хорошие технологические решения, упрощающие
@@ -166,6 +197,7 @@
 
     </main>
 
+    <script src="/js/post.js"></script>
     @@include('../../../parts/footer.html', {
 
     })
