--- a/src/html/p/pet-project-development-what-is-it-and-for-what/index.html
+++ b/src/html/p/pet-project-development-what-is-it-and-for-what/index.html
@@ -10,18 +10,41 @@
 
     })
 
-    <main class="container post--font-size main--post">
+    <main id="post--main" class="container post--font-size main--post">
 
-        <!-- <div>
-            Увеличить текст
-            Уменьшить текст
-            Отобразить якори
-            Черный текст на белом фоне
-            Белый текст на черном фоне
-        </div> -->
+        <div class="container container--post">
+            <div class="row row-cols-1 row-cols-lg-4 g-2 g-lg-3 justify-content-end">
+                <div class="col">
+                    <div class="text-invert btn-rounded fs-5">
+                        <button onClick="PostTextUp()" aria-label="Увеличить размер шрифта на сайте"
+                            class="btn btn-dark btn-post--btn px-4 py-2 d-flex text-decoration-none text-invert align-items-center">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" class="icon-invert me-3"
+                                viewBox="0 0 16 16">
+                                <path
+                                    d="m2.244 13.081.943-2.803H6.66l.944 2.803H8.86L5.54 3.75H4.322L1 13.081h1.244zm2.7-7.923L6.34 9.314H3.51l1.4-4.156h.034zm9.146 7.027h.035v.896h1.128V8.125c0-1.51-1.114-2.345-2.646-2.345-1.736 0-2.59.916-2.666 2.174h1.108c.068-.718.595-1.19 1.517-1.19.971 0 1.518.52 1.518 1.464v.731H12.19c-1.647.007-2.522.8-2.522 2.058 0 1.319.957 2.18 2.345 2.18 1.06 0 1.716-.43 2.078-1.011zm-1.763.035c-.752 0-1.456-.397-1.456-1.244 0-.65.424-1.115 1.408-1.115h1.805v.834c0 .896-.752 1.525-1.757 1.525z" />
+                            </svg>
+                            Увеличить
+                        </button>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="text-invert btn-rounded fs-5">
+                        <button onClick="PostTextDown()" aria-label="Уменьшить размер шрифта на сайте"
+                            class="btn btn-dark btn-post--btn px-4 py-2 d-flex text-decoration-none text-invert align-items-center">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" class="icon-invert me-3"
+                                viewBox="0 0 16 16">
+                                <path
+                                    d="m2.244 13.081.943-2.803H6.66l.944 2.803H8.86L5.54 3.75H4.322L1 13.081h1.244zm2.7-7.923L6.34 9.314H3.51l1.4-4.156h.034zm9.146 7.027h.035v.896h1.128V8.125c0-1.51-1.114-2.345-2.646-2.345-1.736 0-2.59.916-2.666 2.174h1.108c.068-.718.595-1.19 1.517-1.19.971 0 1.518.52 1.518 1.464v.731H12.19c-1.647.007-2.522.8-2.522 2.058 0 1.319.957 2.18 2.345 2.18 1.06 0 1.716-.43 2.078-1.011zm-1.763.035c-.752 0-1.456-.397-1.456-1.244 0-.65.424-1.115 1.408-1.115h1.805v.834c0 .896-.752 1.525-1.757 1.525z" />
+                            </svg>
+                            Уменьшить
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
 
         <div class="container--post post--start-1">
-            <h1>Разработка pet-проектов — что это и для чего?</h1>
+            <h1 class="post--h1-font">Разработка pet-проектов — что это и для чего?</h1>
             <p class="post--start-p">Постараемся разобраться в сегодняшней статье.</p>
         </div>
 
@@ -40,12 +63,12 @@
                 Для изучения программирования стоит самостоятельно разрабатывать свои проекты разной направленности, чтобы понять язык
                 программирования лучше и чтобы набраться больше опыта.
             </p>
-            <h3>Pet-проект - что это</h3>
+            <h3 class="post--h-font">Pet-проект - что это</h3>
             <p>
                 Pet-проект - это такой же проект, как и обычно, но создаваемый исходя из личных интересов. Чаще всего pet-проекты нужны
                 для изучения какой-то новой технологии, расширения знаний и получения нового опыта в сфере программирования.
             </p>
-            <h3>Зачем нужно вести свой pet-проект</h3>
+            <h3 class="post--h-font">Зачем нужно вести свой pet-проект</h3>
             <p>
                 Как и сказано выше, pet-проект может помочь лучше изучить какую-то технологию, опробовать новое технологическое решение,
                 придумать что-то интересное или отвлечься от основной деятельности.
@@ -73,6 +96,7 @@
 
     </main>
 
+    <script src="/js/post.js"></script>
     @@include('../../../parts/footer.html', {
 
     })
