--- a/src/html/p/the-path-of-a-programmer-is-a-difficult-path/index.html
+++ b/src/html/p/the-path-of-a-programmer-is-a-difficult-path/index.html
@@ -10,10 +10,41 @@
 
     })
 
-    <main class="container post--font-size main--post">
+    <main id="post--main" class="container post--font-size main--post">
+
+        <div class="container container--post">
+            <div class="row row-cols-1 row-cols-lg-4 g-2 g-lg-3 justify-content-end">
+                <div class="col">
+                    <div class="text-invert btn-rounded fs-5">
+                        <button onClick="PostTextUp()" aria-label="Увеличить размер шрифта на сайте"
+                            class="btn btn-dark btn-post--btn px-4 py-2 d-flex text-decoration-none text-invert align-items-center">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" class="icon-invert me-3"
+                                viewBox="0 0 16 16">
+                                <path
+                                    d="m2.244 13.081.943-2.803H6.66l.944 2.803H8.86L5.54 3.75H4.322L1 13.081h1.244zm2.7-7.923L6.34 9.314H3.51l1.4-4.156h.034zm9.146 7.027h.035v.896h1.128V8.125c0-1.51-1.114-2.345-2.646-2.345-1.736 0-2.59.916-2.666 2.174h1.108c.068-.718.595-1.19 1.517-1.19.971 0 1.518.52 1.518 1.464v.731H12.19c-1.647.007-2.522.8-2.522 2.058 0 1.319.957 2.18 2.345 2.18 1.06 0 1.716-.43 2.078-1.011zm-1.763.035c-.752 0-1.456-.397-1.456-1.244 0-.65.424-1.115 1.408-1.115h1.805v.834c0 .896-.752 1.525-1.757 1.525z" />
+                            </svg>
+                            Увеличить
+                        </button>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="text-invert btn-rounded fs-5">
+                        <button onClick="PostTextDown()" aria-label="Уменьшить размер шрифта на сайте"
+                            class="btn btn-dark btn-post--btn px-4 py-2 d-flex text-decoration-none text-invert align-items-center">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" class="icon-invert me-3"
+                                viewBox="0 0 16 16">
+                                <path
+                                    d="m2.244 13.081.943-2.803H6.66l.944 2.803H8.86L5.54 3.75H4.322L1 13.081h1.244zm2.7-7.923L6.34 9.314H3.51l1.4-4.156h.034zm9.146 7.027h.035v.896h1.128V8.125c0-1.51-1.114-2.345-2.646-2.345-1.736 0-2.59.916-2.666 2.174h1.108c.068-.718.595-1.19 1.517-1.19.971 0 1.518.52 1.518 1.464v.731H12.19c-1.647.007-2.522.8-2.522 2.058 0 1.319.957 2.18 2.345 2.18 1.06 0 1.716-.43 2.078-1.011zm-1.763.035c-.752 0-1.456-.397-1.456-1.244 0-.65.424-1.115 1.408-1.115h1.805v.834c0 .896-.752 1.525-1.757 1.525z" />
+                            </svg>
+                            Уменьшить
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
 
         <div class="container--post post--start-1">
-            <h1>Путь программиста — это трудный путь?</h1>
+            <h1 class="post--h1-font">Путь программиста — это трудный путь?</h1>
             <p class="post--start-p">Постараемся разобраться в сегодняшней статье.</p>
         </div>
 
@@ -40,7 +71,7 @@
                 Если говорить более умным языком: кодер работает по заранее заданному алгоритму, а программист отвечает за разработку
                 данного алгоритма.
             </p>
-            <h3>Трудности на начале пути</h3>
+            <h3 class="post--h-font">Трудности на начале пути</h3>
             <p>
                 Ответить однозначно на вопрос нельзя, ведь каждого ждет свой особенный путь. Но что могу выявить из своего опыта…
             </p>
@@ -59,7 +90,7 @@
                 Лично я столкнулся с некоторой неприятной проблемой, о которой могут говорить различные информационные материалы в
                 интернете, рассуждая о проблемах, которые будут ждать программиста.
             </p>
-            <h3>Что программиста будет ждать в будущем</h3>
+            <h3 class="post--h-font">Что программиста будет ждать в будущем</h3>
             <p>
                 Лично я могу выделить некоторый интервал на начале, когда изучение станет очень трудным. Вы попадете в некоторую «яму».
                 Данная проблема характеризует неопределенность в дальнейшем пути изучения программирования. Вы не будете понимать, что
@@ -70,7 +101,7 @@
                 программирования, а сразу же идете изучать какой-нибудь крупный фреймворк данного языка программирования, который
                 полностью строится на основах данного языка программирования.
             </p>
-            <h3>Выгорание</h3>
+            <h3 class="post--h-font">Выгорание</h3>
             <p>
                 Наверное самое страшное, что может ждать программиста — выгорание. Только пройдя через него можно говорить, что это
                 такое. На своем пути я уже успел 2 раза выгореть от проекта.
@@ -88,7 +119,7 @@
                 избежать возможное выгорание. Дело в том, что выгорание является первой ступенью будущей депрессии. Стоит осознавать
                 серьезность данной проблемы.
             </p>
-            <h3>Как бороться с перечисленными проблемами</h3>
+            <h3 class="post--h-font">Как бороться с перечисленными проблемами</h3>
             <p>
                 Прежде всего я порекомендую создать интервал времени, которое Вы сможете выделять на программирование. С какого и до
                 какого часа Вам лично разрешено заниматься программированием. Данный временной интервал поможет избежать ночных
@@ -105,7 +136,7 @@
                 действовать. Если у Вас совсем нет сил что-либо делать — нужно оторваться от всех дел до того момента, как Вы заново не
                 станете «гореть» по любимому делу.
             </p>
-            <h3>Выгода и плюсы</h3>
+            <h3 class="post--h-font">Выгода и плюсы</h3>
             <p>
                 Если у Вас есть много сил на работу, но именно это дело Вас не привлекает, а решать вопрос нужно, то есть 2 пути: решать
                 вопрос через силу или начать делать дела, близкие к задаче. Спустя четырех лет активного программирования я отдаю больше
@@ -134,6 +165,7 @@
 
     </main>
 
+    <script src="/js/post.js"></script>
     @@include('../../../parts/footer.html', {
 
     })
