work at updates

--- a/src/html/updates.html
+++ b/src/html/updates.html
@@ -26,6 +26,7 @@
                 <li>Расширенные возможности просмотра содержимого
                     у отдельных авторов
                 </li>
+                <li>Возможность увеличения размера текста на странице записи</li>
                 <li>Проведены тестирования на сервере.</li>
             </ul>
         </div>
