--- a/src/parts/p--updates.html
+++ b/src/parts/p--updates.html
@@ -1,1 +1,13 @@
-123
+<div class="container container--main">
+    <div class="row row-cols-1 row-cols-lg-2 gx-3">
+        <div class="col pb-3 mb-sm-0">
+            <a href="/updates/creagoo/novyy-sayt-creagoo-ru"
+                class="card card--link card--rounded border-0">
+                <img src="/img/updates/creagoo.jpg" class="card-img" alt="Фотография логотипа Creagoo">
+                <div class="card-img-overlay card--bg-gradient d-flex">
+                    <p class="card-title text-white mt-auto card--title card--title-2">Новый сайт creagoo.ru</p>
+                </div>
+            </a>
+        </div>
+    </div>
+</div>
