change tags and get updates

--- a/src/html/p/experience-using-iphone-6s-for-six-months/index.html
+++ b/src/html/p/experience-using-iphone-6s-for-six-months/index.html
@@ -44,7 +44,7 @@
         </div>
 
         <div class="container--post post--start-1">
-            <h1 class="post--h1-font">Опыт использования iPhone 6s в течение полугода</h1>
+            <h1>Опыт использования iPhone 6s в течение полугода</h1>
             <p class="post--start-p">Мой первый айфон.</p>
         </div>
 
@@ -59,12 +59,12 @@
                 желания полностью переходить на экосистему Apple, потому что думал, что мне достаточно будет одного макбука. Но как
                 оказалось позже - переход на экосистему Apple абсолютно верный шаг.
             </p>
-            <h3 class="post--h-font">Чем обосновывалась моя покупка</h3>
+            <h3>Чем обосновывалась моя покупка</h3>
             <p>
                 Я решил взять попробовать iPhone 6s из-за 2 причин: я хотел попробовать экосистему Apple и мне было интересно собрать
                 приложение для iOS. И мое знакомство оказалось очень приятным, что я решил полностью перейти на экосистему Apple.
             </p>
-            <h3 class="post--h-font">Первое впечатление от своего первого айфона</h3>
+            <h3>Первое впечатление от своего первого айфона</h3>
             <p>
                 Продуманность системы, анимации, экосистема, продуманность приложений, отличные цвета и приятные материалы - это все,
                 что Вы получите от устройства Apple.
@@ -78,7 +78,7 @@
                 Я смело могу порекомендовать к покупке айфона в качестве своего основного устройства, если перед Вами не стоят особые
                 задачи, для решений которых айфон не будет казаться таким сильным с технической стороны.
             </p>
-            <h3 class="post--h-font">Большие удобства iPhone 6s</h3>
+            <h3>Большие удобства iPhone 6s</h3>
             <p>
                 До этого времени я пользовался лишь андроид смартфонами и знал об удобстве айфонов лишь по словам людей. Да, пускай у
                 меня иногда и получалось воспользоваться айфонами и даже в течении некоторого времени, данный опыт нельзя назвать опытом
@@ -93,7 +93,7 @@
                 цены —невероятное счастье для опыта. Вряд ли у меня получится описать невероятные качества данного аппарата, но я
                 постараюсь.
             </p>
-            <h3 class="post--h-font">Отличия айфона от телефона на андроиде</h3>
+            <h3>Отличия айфона от телефона на андроиде</h3>
             <p>
                 Прежде всего интеграция с другими устройствами Apple выполнена отлично. Да, такое есть и у других компаниях, но их
                 решения слабее и я не пользуюсь техникой одной компании.
@@ -113,7 +113,7 @@
                 Сзади крышка айфона выполнена из алюминия, из-за чего разбить ее не представляется возможным. А материалы приятные, и
                 телефон выглядит достаточно красиво.
             </p>
-            <h3 class="post--h-font">Проблемы iPhone 6s</h3>
+            <h3>Проблемы iPhone 6s</h3>
             <p>
                 Устройство уже весьма старое и некоторые нововведения iOS 15 для телефона весьма плохо сказываются на работоспособности
                 и удобстве.
@@ -130,7 +130,7 @@
                 потратила большую часть своей емкости. Мое использование айфона показало, что его хватает на 3-4 часа активного
                 использования со 100% аккумулятором.
             </p>
-            <h3 class="post--h-font">Заключение</h3>
+            <h3>Заключение</h3>
             <p>
                 Данный аппарат я могу посоветовать тем, кто желает испробовать айфон в качестве основного устройства без особых
                 вложений. Последняя поддерживаемая iOS — 15, поэтому восприятие от устройства будет максимально. Но использовать iPhone
