--- a/src/html/p/how-I-develop-websites-in-php/index.html
+++ b/src/html/p/how-I-develop-websites-in-php/index.html
@@ -44,7 +44,7 @@
         </div>
 
         <div class="container--post post--start-1">
-            <h1 class="post--h1-font">Как я разрабатываю сайты на PHP</h1>
+            <h1>Как я разрабатываю сайты на PHP</h1>
             <p class="post--start-p">Небольшой гайд.</p>
         </div>
 
@@ -58,7 +58,7 @@
                 За 3 года активной разработки проектов в web-среде для личного пользования и людям на заказ я вывел некоторую форму
                 удобной сортировки проекта. Решил рассказать об этом людям, так как скоро буду менять стиль разработки.
             </p>
-            <h3 class="post--h-font">Структурирование проекта</h3>
+            <h3>Структурирование проекта</h3>
             <p>
                 Прежде всего стоит разобраться со структурой проекта. Какое-то время я использовал длинные названия, понятные, но из-за
                 них URL может удлиниться. Теперь мне больше по душе непонятные папки в духе «a», «f», «db» и прочее.
@@ -98,7 +98,7 @@
             <p>
                 И самое интересное - папка «a» - сокращение от слова another. Чаще всего здесь я храню весь «мусор», без которого нельзя обойтись. Я редко меняю файлы и папки, хранящиеся в папке «a». Именно поэтому я вынес данные файлы и папки в папку «a». К примеру, в папке «a» я храню стили Bootstrap, шрифты, JavaScript-код и сохранения с базы данных. В случае чего можно расширить количество хранимых здесь файлов и интегрировать иные решения, нужные для проекта.
             </p>
-            <h3 class="post--h-font">Вспомогательные файлы, нужные для качественного сайта</h3>
+            <h3>Вспомогательные файлы, нужные для качественного сайта</h3>
             <p>
                 Но просто папками и файлами PHP обойтись не получится. Да, можно создать отличный, оптимизированных с хорошей
                 доступностью сайт. Но помимо наличия файлов страниц, нужны также вспомогательные файлы, описывающие сайт. Данные файлы
@@ -132,7 +132,7 @@
                 посмотрите новостные сайты, в footer’е Вы увидите ссылку на RSS-канал. Это файл, хранящий какие-то записи. Часто данный
                 RSS-файл можно подключить для какой-нибудь соц. сети, чтобы она отображала Ваши последние страницы.
             </p>
-            <h3 class="post--h-font">«Чистый» PHP или Laravel</h3>
+            <h3>«Чистый» PHP или Laravel</h3>
             <p>
                 Мы разобрали структуру сайта, посмотрели, каким образом следует хранить файлы проекта. Теперь разберемся, какой вариант
                 следует использовать - просто PHP или фреймворк Laravel?
@@ -169,7 +169,7 @@
                 непонятно, каким образом можно удобно загрузить проект на сервер. Отсутствие гостеприимства и оттолкнуло меня от
                 использования Laravel.
             </p>
-            <h3 class="post--h-font">Язык программирования для обработки backend-запросов</h3>
+            <h3>Язык программирования для обработки backend-запросов</h3>
             <p>
                 Я решил выбрать язык программирования PHP для обработки backend-запросов. Выбор сделан из-за очень простой причины:
                 данный язык программирования развивается достаточно долго, имеет внутри себя хорошие технологические решения, упрощающие
