--- a/src/html/p/how-I-fight-against-burnout/index.html
+++ b/src/html/p/how-I-fight-against-burnout/index.html
@@ -44,7 +44,7 @@
         </div>
 
         <div class="container--post post--start-1">
-            <h1 class="post--h1-font">Как я борюсь против выгорания</h1>
+            <h1>Как я борюсь против выгорания</h1>
             <p class="post--start-p">Постараемся разобраться в сегодняшней статье.</p>
         </div>
 
@@ -61,7 +61,7 @@
             <p>
                 Чаще всего именно программисты из-за большого количества монотонной работы выгорают от своего дела.
             </p>
-            <h3 class="post--h-font">Что такое выгорание</h3>
+            <h3>Что такое выгорание</h3>
             <p>
                 Выгорание — это состояние моральной усталости, из-за которого нет желания чем-либо заниматься. Выгорание — это первая
                 ступень к депрессии. Не стоит недооценивать это состояние, потому что борьба с выгоранием не такая простая, как с
@@ -73,7 +73,7 @@
                 занимаешься приносит большое количества вреда, потому что от нас может многое чего зависеть и нам просто необходимо
                 решать задачи.
             </p>
-            <h3 class="post--h-font">Борьба с выгоранием</h3>
+            <h3>Борьба с выгоранием</h3>
             <p>
                 Первый и самый важный шаг — это определить, что у вас именно выгорание, а не простая усталость от дела. Как я сказал
                 выше, выгоранием часто болеют программисты, потому что в их задачи входит монотонная работа, которую нужно выполнять.
