--- a/src/html/p/how-did-I-start-learning-programming/index.html
+++ b/src/html/p/how-did-I-start-learning-programming/index.html
@@ -44,7 +44,7 @@
         </div>
 
         <div class="container--post post--start-1">
-            <h1 class="post--h1-font">С чего я начал изучать программирование</h1>
+            <h1>С чего я начал изучать программирование</h1>
             <p class="post--start-p">Постараюсь ответить на этот вопрос.</p>
         </div>
 
@@ -59,7 +59,7 @@
                 пор. В большей степени это связано с огромным спросом в программистах, которых становится все меньше. О удаленной работе
                 мы поговорим позже.
             </p>
-            <h3 class="post--h-font">Первый проект</h3>
+            <h3>Первый проект</h3>
             <p>
                 Первый проект, который я разрабатывал на своих плечах, с которым мне помогал мой научный руководитель — игровой проект
                 Babka On The Hunt. Это другая версия игры, представленная в Google Play.
@@ -77,7 +77,7 @@
                 Для того, чтобы лучше понять смысл программирования с моим научным руководителем было решено разрабатывать свой игровой
                 проект, с которым я выступал на конкурсах и занимал места.
             </p>
-            <h3 class="post--h-font">Мой первый сайт</h3>
+            <h3>Мой первый сайт</h3>
             <p>
                 Помимо наличия игрового проекта в разработке, мне всегда было интересно разработать свой сайт, которым будут
                 пользоваться люди. И я стал увлекаться еще и данным направлением.
@@ -94,7 +94,7 @@
                 Так я и стал вести в разработке проект live.creagoo.ru, о котором писал статью ранее. Уже к этому моменту я активно
                 занимался разработкой игровых проектов и web-ресурсов.
             </p>
-            <h3 class="post--h-font">Прочие занятия</h3>
+            <h3>Прочие занятия</h3>
             <p>
                 Также я активно писал код и на Python’е, на котором, преимущественно, создавал алгоритмы и никогда не занимался
                 разработкой своей системы, потому что я всегда использовал другие языки программирования для решения своих технических
@@ -104,7 +104,7 @@
                 На Python’е я писал программы для работы в консоли. Создавал web-ресурсы с авторизацией пользователя и решал задачи с
                 искусственным интеллектом.
             </p>
-            <h3 class="post--h-font">Как я познакомился с программированием</h3>
+            <h3>Как я познакомился с программированием</h3>
             <p>
                 Все свое детство я был связан с техникой: телефонами, ноутбуками и прочими аппаратами. Меня всегда привлекало данное
                 направление и мне было интересно разбираться и чинить поделки.
