--- a/src/html/p/macbook-pro-2014-13-review/index.html
+++ b/src/html/p/macbook-pro-2014-13-review/index.html
@@ -42,7 +42,7 @@
         </div>
 
         <div class="container--post post--start-1">
-            <h1 class="post--h1-font">Macbook Pro 2014 13' — обзор</h1>
+            <h1>Macbook Pro 2014 13' — обзор</h1>
             <p class="post--start-p">Мое самое любимое устройство.</p>
         </div>
 
@@ -57,7 +57,7 @@
                 на котором я программирую. Я часто могу слышать про то, что макбук — это отличный девайс для творческих людей и
                 программистов в том числе. Попробуем разобрать, в связи с чем люди делятся подобным мнением.
             </p>
-            <h3 class="post--h-font">Как я его покупал</h3>
+            <h3>Как я его покупал</h3>
             <p>
                 Мою модель уже не получится найти в официальном магазине или на складе в качестве остатков. Я смотрел интернет-площадки,
                 где люди выставляют свои старые товары на продажу. Главный плюс подобных интернет-площадок в том, что можно обзавестись
@@ -69,7 +69,7 @@
                 потому что прошло слишком много времени с момента покупки. Я купил устройство уже с некоторыми проблемами на дисплее, не
                 влияющие на работу. Также аккумулятор был плохо приклеен и отсутствовало 3 болта сзади на крышке.
             </p>
-            <h3 class="post--h-font">Есть макбук, есть устройства на Windows — что же выбрать</h3>
+            <h3>Есть макбук, есть устройства на Windows — что же выбрать</h3>
             <p>
                 Я всегда считал, что ответ на данный вопрос для каждого человека свой. Фактически, так и есть на самом деле, потому что
                 огромное количество людей поддерживают макбуки, а другое количество людей отдают предпочтение Windows.
@@ -85,7 +85,7 @@
                 он так дорого стоит. Да, цена действительно большая, я бы не хотел разбирать, из чего формируется такая цена, а хотел бы
                 больше времени уделить сравнению со средним ноутбуком на Windows и моим макбуком.
             </p>
-            <h3 class="post--h-font">Критика Windows</h3>
+            <h3>Критика Windows</h3>
             <p>
                 Сообщу сразу, что говорить, что за модель я не стану, потому что использую свою рабочую станцию на Windows как ПК и
                 характеристики сильно изменены. Здесь мы говорим сугубо о моем опыте использования.
@@ -122,7 +122,7 @@
                 Я не могу в полном объеме отказаться от Windows, иначе сделал бы это уже давно. Но нередко приходится заниматься
                 рутиной: очисткой, удалением, изменением и прочим.
             </p>
-            <h3 class="post--h-font">Про macOS</h3>
+            <h3>Про macOS</h3>
             <p>
                 Я не могу озвучить ничего подобного про macOS. Вряд ли все дело в том, что с момента покупки макбука прошло только
                 полгода, потому что я уже успел воспользоваться OpenCore’ром, опробовать свыше 5-ти macOS’ей и остаться максимально
@@ -153,7 +153,7 @@
                 «Завершить Safari» был недоступен. Мне пришлось выключить систему, после чего макбук предупредил меня об произошедшей
                 ошибки и предложил отправить отчет.
             </p>
-            <h3 class="post--h-font">Модель макбука</h3>
+            <h3>Модель макбука</h3>
             <p>
                 Мой выбор пал на Macbook Pro 13’ 2014. Не пугайтесь года выпуска, я смело решаю все задачи, связанные с
                 программированием, просмотром контента и прочим и не имею никаких проблем. К слову, установлена операционная система
@@ -165,7 +165,7 @@
                 официально неподдерживаемой macOS. Тем более, что есть официально поддерживаемая macOS Big Sur, между данными
                 операционными системами отличия минимальны и меня полностью все устраивает.
             </p>
-            <h3 class="post--h-font">Плюсы макбука</h3>
+            <h3>Плюсы макбука</h3>
             <p>
                 <i>Дисплей</i> макбука невероятен. Технология Retina удваивает количество пикселей дисплея, из-за чего Вы не увидите здесь
                 пиксели. Отличная калибровка дисплея позволит получать удовольствие от цветов, которые максимально приближены к
@@ -192,7 +192,7 @@
                 обмениваться данными, использовать бесшовную отправку материалов и не испытывать никакого дискомфорта в вопросе отправки
                 данных.
             </p>
-            <h3 class="post--h-font">Проблемы данного макбука</h3>
+            <h3>Проблемы данного макбука</h3>
             <p>
                 Как и было сказано выше — данный макбук уже 8 лет на рынке и купить абсолютно новый девайс не представляется возможным,
                 с огромной вероятностью Вы купите когда-то использованное устройство, так называемое б/у.
@@ -237,7 +237,7 @@
                 Решаю вопрос с диагональю с помощью подключения внешнего монитора, на котором и произвожу операции, связанные с кодом.
                 Именно поэтому я в полном объеме остаюсь довольным и не хочу ничего менять.
             </p>
-            <h3 class="post--h-font">Как я использую макбук</h3>
+            <h3>Как я использую макбук</h3>
             <p>
                 Вообще, мне пришла идея покупки легкого ноутбука после того, как я в очередной раз взял с собой свой ноутбук, который
                 весит порядка полутора-двух килограмм. Какое-то время назад я еще не был так сильно уверен в том, чтобы купить именно
@@ -257,7 +257,7 @@
                 ноутбук, который в качестве основного рабочего устройства, к которому я подключаю клавиатуру и пользуюсь внешним
                 монитором.
             </p>
-            <h3 class="post--h-font">Заключение</h3>
+            <h3>Заключение</h3>
             <p>
                 Статья не имеет большой технической части, она направлена на ответ на вопрос «Для кого лучше всего подойдет макбук» и
                 «Стоит ли взять попробовать». Далеко не у каждого будут такие впечатление от покупки устройства, все зависит от самого
