--- a/src/html/p/pet-project-development-what-is-it-and-for-what/index.html
+++ b/src/html/p/pet-project-development-what-is-it-and-for-what/index.html
@@ -44,7 +44,7 @@
         </div>
 
         <div class="container--post post--start-1">
-            <h1 class="post--h1-font">Разработка pet-проектов — что это и для чего?</h1>
+            <h1>Разработка pet-проектов — что это и для чего?</h1>
             <p class="post--start-p">Постараемся разобраться в сегодняшней статье.</p>
         </div>
 
@@ -63,12 +63,12 @@
                 Для изучения программирования стоит самостоятельно разрабатывать свои проекты разной направленности, чтобы понять язык
                 программирования лучше и чтобы набраться больше опыта.
             </p>
-            <h3 class="post--h-font">Pet-проект - что это</h3>
+            <h3>Pet-проект - что это</h3>
             <p>
                 Pet-проект - это такой же проект, как и обычно, но создаваемый исходя из личных интересов. Чаще всего pet-проекты нужны
                 для изучения какой-то новой технологии, расширения знаний и получения нового опыта в сфере программирования.
             </p>
-            <h3 class="post--h-font">Зачем нужно вести свой pet-проект</h3>
+            <h3>Зачем нужно вести свой pet-проект</h3>
             <p>
                 Как и сказано выше, pet-проект может помочь лучше изучить какую-то технологию, опробовать новое технологическое решение,
                 придумать что-то интересное или отвлечься от основной деятельности.
