--- a/src/html/p/the-new-generation-of-the-iphone-xr-device/index.html
+++ b/src/html/p/the-new-generation-of-the-iphone-xr-device/index.html
@@ -44,7 +44,7 @@
         </div>
 
         <div class="container--post post--start-1">
-            <h1 class="post--h1-font">Новое поколение устройства — iPhone Xr</h1>
+            <h1>Новое поколение устройства — iPhone Xr</h1>
             <p class="post--start-p">История, как полюбил iPhone Xr</p>
         </div>
 
@@ -61,7 +61,7 @@
             <p>
                 У меня получилось так, что я перешел на iPhone Xr с 6s, и моему удивлению не было предела!
             </p>
-            <h3 class="post--h-font">Удобства</h3>
+            <h3>Удобства</h3>
             <p>
                 Face ID — очень удобная функция. У меня часто бывает ситуация мокрых пальцев, поэтому вариант с отпечатком пальца мне не
                 нравится. Почти все время приходится вводить пароль. А пароль мне часто приходится вводить из-за большого количества
@@ -88,7 +88,7 @@
                 Челка не мешает просмотру содержимого. В любом случае, с ее помощью мы видим больше содержимого, потому что сбоку от
                 челки помещается техническая информация.
             </p>
-            <h3 class="post--h-font">Почему именно iPhone Xr</h3>
+            <h3>Почему именно iPhone Xr</h3>
             <p>
                 Да, существует SE, 11 и 12. Но мой выбор пал на Xr из-за максимального количества плюсов и минимальной цены на аппарат.
                 На текущий момент рыночная цена устройства 16.000 рублей, в эту цену входит 100% цены телефона. И это прекрасно.
