--- a/src/html/p/the-path-of-a-programmer-is-a-difficult-path/index.html
+++ b/src/html/p/the-path-of-a-programmer-is-a-difficult-path/index.html
@@ -44,7 +44,7 @@
         </div>
 
         <div class="container--post post--start-1">
-            <h1 class="post--h1-font">Путь программиста — это трудный путь?</h1>
+            <h1>Путь программиста — это трудный путь?</h1>
             <p class="post--start-p">Постараемся разобраться в сегодняшней статье.</p>
         </div>
 
@@ -71,7 +71,7 @@
                 Если говорить более умным языком: кодер работает по заранее заданному алгоритму, а программист отвечает за разработку
                 данного алгоритма.
             </p>
-            <h3 class="post--h-font">Трудности на начале пути</h3>
+            <h3>Трудности на начале пути</h3>
             <p>
                 Ответить однозначно на вопрос нельзя, ведь каждого ждет свой особенный путь. Но что могу выявить из своего опыта…
             </p>
@@ -90,7 +90,7 @@
                 Лично я столкнулся с некоторой неприятной проблемой, о которой могут говорить различные информационные материалы в
                 интернете, рассуждая о проблемах, которые будут ждать программиста.
             </p>
-            <h3 class="post--h-font">Что программиста будет ждать в будущем</h3>
+            <h3>Что программиста будет ждать в будущем</h3>
             <p>
                 Лично я могу выделить некоторый интервал на начале, когда изучение станет очень трудным. Вы попадете в некоторую «яму».
                 Данная проблема характеризует неопределенность в дальнейшем пути изучения программирования. Вы не будете понимать, что
@@ -101,7 +101,7 @@
                 программирования, а сразу же идете изучать какой-нибудь крупный фреймворк данного языка программирования, который
                 полностью строится на основах данного языка программирования.
             </p>
-            <h3 class="post--h-font">Выгорание</h3>
+            <h3>Выгорание</h3>
             <p>
                 Наверное самое страшное, что может ждать программиста — выгорание. Только пройдя через него можно говорить, что это
                 такое. На своем пути я уже успел 2 раза выгореть от проекта.
@@ -119,7 +119,7 @@
                 избежать возможное выгорание. Дело в том, что выгорание является первой ступенью будущей депрессии. Стоит осознавать
                 серьезность данной проблемы.
             </p>
-            <h3 class="post--h-font">Как бороться с перечисленными проблемами</h3>
+            <h3>Как бороться с перечисленными проблемами</h3>
             <p>
                 Прежде всего я порекомендую создать интервал времени, которое Вы сможете выделять на программирование. С какого и до
                 какого часа Вам лично разрешено заниматься программированием. Данный временной интервал поможет избежать ночных
@@ -136,7 +136,7 @@
                 действовать. Если у Вас совсем нет сил что-либо делать — нужно оторваться от всех дел до того момента, как Вы заново не
                 станете «гореть» по любимому делу.
             </p>
-            <h3 class="post--h-font">Выгода и плюсы</h3>
+            <h3>Выгода и плюсы</h3>
             <p>
                 Если у Вас есть много сил на работу, но именно это дело Вас не привлекает, а решать вопрос нужно, то есть 2 пути: решать
                 вопрос через силу или начать делать дела, близкие к задаче. Спустя четырех лет активного программирования я отдаю больше
