--- a/src/html/p/project-development-history-live.creagoo.ru-its-forced-closure/index.html
+++ b/src/html/p/project-development-history-live.creagoo.ru-its-forced-closure/index.html
@@ -44,7 +44,7 @@
         </div>
 
         <div class="container--post post--start-1">
-            <h1 class="post--h1-font">История разработки проекта live.creagoo.ru — его вынужденное закрытие</h1>
+            <h1>История разработки проекта live.creagoo.ru — его вынужденное закрытие</h1>
             <p class="post--start-p">live.creagoo.ru должен был заменить основной сайт Creagoo.</p>
         </div>
 
@@ -59,7 +59,7 @@
                 острое желание заняться оптимизацией сайта, а для этого требовался контроль за разработкой. Я смог получить контроль,
                 создавая сайт самостоятельно.
             </p>
-            <h3 class="post--h-font">Для чего используется Bootstrap</h3>
+            <h3>Для чего используется Bootstrap</h3>
             <p>
                 Bootstrap несет в себе заранее написанные стили и некоторые решения, использующие JavaScript. С помощью Bootstrap можно
                 создавать адаптивные сайты, без написания «базовых» стилей.
@@ -68,19 +68,19 @@
                 Использовался Bootstrap в связи с тем, что с его помощью можно достаточно быстро создать простой сайт. Этим я и решил
                 пользоваться и стал изучать Bootstrap. Мое изучение Bootstrap отразилось в создании проекта live.creagoo.ru.
             </p>
-            <h3 class="post--h-font">Первые страницы, созданные для проекта live.creagoo.ru</h3>
+            <h3>Первые страницы, созданные для проекта live.creagoo.ru</h3>
             <p>
                 Прежде всего стоит сказать, что проект live.creagoo.ru разрабатывался для игровой студии Creagoo, в которой я руковожу.
                 Первые страницы — это страницы игровых проектов, описания команды и история разработки логотипа. Это все базовые
                 страницы, без которых масштабный сайт не может существовать.
             </p>
-            <h3 class="post--h-font">Блог в проекте live.creagoo.ru</h3>
+            <h3>Блог в проекте live.creagoo.ru</h3>
             <p>
                 Далее я стал вести в разработке и другие решения. Например, я разработал свой блог уже в 2020 году. Представлял он
                 собой обычную базу данных, вместе с языком программирования PHP, с помощью которого производилось подключение к базе
                 данных и управление записями из таблиц.
             </p>
-            <h3 class="post--h-font">Персонализация контента — личный кабинет проекта live.creagoo.ru</h3>
+            <h3>Персонализация контента — личный кабинет проекта live.creagoo.ru</h3>
             <p>
                 После я решил вести в разработке свой личный кабинет, который я смог довести до ума только спустя 2 года в проекте
                 <a href="//id.creagoo.ru" class="link">аквариум</a>. Личный кабинет — это простое тестовое задание, проверяющее умение программиста управлять данными для
@@ -99,7 +99,7 @@
                 «идеального» проекта является пустой тратой времени. Все, что хочется исправить сейчас следует оставить просто до лучших
                 времен.
             </p>
-            <h3 class="post--h-font">Сообщения в проекте live.creagoo.ru</h3>
+            <h3>Сообщения в проекте live.creagoo.ru</h3>
             <p>
                 Также было реализовано интересное технологическое решение в лице возможности вести переписку с пользователями. Ты
                 самостоятельно выбираешь человека, с которым будешь общаться. Вводишь нужное сообщение, отправляешь, его получает
@@ -111,7 +111,7 @@
                 перезагрузки страницы. Не отображалось, когда последний раз пользователь зашел в сеть и можно ли ему сейчас написать или
                 нет.
             </p>
-            <h3 class="post--h-font">Зачем я стал вести проект live.creagoo.ru</h3>
+            <h3>Зачем я стал вести проект live.creagoo.ru</h3>
             <p>
                 Проект live.creagoo.ru существовал в качестве замены основного сайта. CMS WordPress предоставляло плохую техническую
                 часть, слабую оптимизацию и отсутствие возможности прямого редактирования сайта.
@@ -124,7 +124,7 @@
                 В будущем я планировал заменить текущий сайт <a href="//creagoo.ru" class="link">creagoo.ru</a> новым решением live.creagoo.ru. Спойлер: именно это у меня и
                 получилось. Сейчас на <a href="//creagoo.ru" class="link">creagoo.ru</a> расположен сайт, который я самостоятельно вел в разработке.
             </p>
-            <h3 class="post--h-font">Почему я решил отказаться от использования CMS WordPress</h3>
+            <h3>Почему я решил отказаться от использования CMS WordPress</h3>
             <p>
                 CMS WordPress помогает вести разработку в более удобном формате. Но чаще всего, если проанализировать созданные сайты на
                 CMS WordPress, данные сайты имеют огромное количество проблем. Начиная от плохо адаптивных сайтов, отсутствия
